Add support for more languages

--- a/emacs-configuration.org
+++ b/emacs-configuration.org
@@ -2,7 +2,7 @@
 * Introduction
   This configuration file contains setup of Emacs packages for Language Server Protocol (LSP). I will use ~use-package~ for package management.
 * Setup
-  Since this is an org file, I am using ~org-babel-load-file~ command to load this file from [[init.el]] file. Emacs loads [[init.el]] when it starts. I have setup a variable called ~EMACS_DIR~ to point to *.emacs.d* as the setup directory. Adjust it to match your system. To speed up loading time of emacs, I have ~used gc-cons-threshold~ and ~gc-cons-percentage~ variables, before and after loading this configuration file. I have set ~gc-cons-threshold~ value to 300 mb after startup. Adjust it to comfortable value according to memory in your system. ~lsp-java~ package however has ~1GB~ setup as default.
+  Since this is an org file, I am using ~org-babel-load-file~ command to load this file from [[init.el]] file. Emacs loads [[init.el]] when it starts. I have setup a variable called ~EMACS_DIR~ to point to *.emacs.d* as the setup directory. Adjust it to match your system. To speed up loading time of emacs, I have used ~gc-cons-threshold~ and ~gc-cons-percentage~ variables, before and after loading this configuration file. I have set ~gc-cons-threshold~ value to 300 mb after startup. Adjust it to comfortable value according to memory in your system. ~lsp-java~ package however has ~1GB~ setup as default.
 
 
 ** Setup repository in org file
@@ -401,6 +401,30 @@ This is the package that handles server installation and session management.
   :ensure t
   :config (add-hook 'java-mode-hook 'lsp))
   (setq lsp-java-workspace-dir "/home/ivvil/Documentos/Eclipse")
+#+end_src
+
+* Other languages
+Pakcages for other languages and hooks
+
+** HTML
+
+#+begin_src emacs-lisp
+  (add-hook 'html-mode-hook 'lsp)
+#+end_src
+
+** JavaScript
+
+#+begin_src emacs-lisp
+  (add-hook 'js-mode-hook 'lsp)
+#+end_src
+
+** Scheme
+
+*** Guile
+
+#+begin_src emacs-lisp
+  (use-package geiser-guile :ensure t)
+  (use-package ac-geiser :ensure t)  
 #+end_src
 
 * Conclusion
