--- a/emacs-configuration.org
+++ b/emacs-configuration.org
@@ -273,11 +273,11 @@ A VC plugin that has github integrations
 #+begin_src emacs-lisp
   (use-package magit :ensure t)
 #+end_src
-** Other packages
+
+** Envrc
 
 #+begin_src emacs-lisp
-  (use-package slime :ensure t)
-  (use-package nix-mode :ensure t)
+  (use-package envrc :ensure t)
 #+end_src
 
 * Language Server Protocol (LSP)
@@ -426,9 +426,18 @@ Pakcages for other languages and hooks
   (add-hook 'js-mode-hook 'lsp)
 #+end_src
 
-** Scheme
+** Lisp
 
-*** Guile
+*** Common Lisp
+
+#+begin_src emacs-lisp
+  (use-package slime :ensure t)
+  (setq inferior-lisp-program "sbcl")
+#+end_src
+
+*** Scheme
+
+**** Guile
 
 #+begin_src emacs-lisp
   (use-package geiser-guile :ensure t)
@@ -441,6 +450,12 @@ Pakcages for other languages and hooks
   (use-package auctex :ensure t :hook (latex-mode . acutex-mode))
   (use-package company-auctex :ensure t)
   (use-package auto-complete-auctex :ensure t)
+#+end_src
+
+** Nix
+
+#+begin_src emacs-lisp
+  (use-package nix-mode :ensure t)
 #+end_src
 
 * Conclusion
