--- a/emacs-configuration.org
+++ b/emacs-configuration.org
@@ -1,12 +1,12 @@
 #+TITLE: ivvil's emacs config
 
 * Introduction
-  This configuration file contains setup of Emacs packages for Language Server Protocol (LSP). I will use ~use-package~ for package management.
+This configuration file contains setup of Emacs packages for Language Server Protocol (LSP). I will use ~use-package~ for package management.
 * Setup
   Since this is an org file, I am using ~org-babel-load-file~ command to load this file from [[init.el]] file. Emacs loads [[init.el]] when it starts. I have setup a variable called ~EMACS_DIR~ to point to *.emacs.d* as the setup directory. Adjust it to match your system. To speed up loading time of emacs, I have used ~gc-cons-threshold~ and ~gc-cons-percentage~ variables, before and after loading this configuration file. I have set ~gc-cons-threshold~ value to 300 mb after startup. Adjust it to comfortable value according to memory in your system. ~lsp-java~ package however has ~1GB~ setup as default.
+  
 
-
-** Setup repository in org file
+q** Setup repository in org file
 In the following code block, we will initialize package repositories and after that install ~use-package~. This package is used to install other packages.
 
 #+BEGIN_SRC emacs-lisp
@@ -17,9 +17,7 @@ In the following code block, we will initialize package repositories and after t
 						   ("org" . "https://orgmode.org/elpa/")
 						   ))
 
-
   (package-initialize)
-
 										  ; Fetch the list of packages available 
   (unless package-archive-contents (package-refresh-contents))
 
@@ -53,52 +51,55 @@ In some operating systems Emacs does not load environment variables properly. Th
 Here, I add some basic emacs setup like loading the language, disabling the toolbar, setting up backup directory etc. I have added comments to each setting.
 
 #+BEGIN_SRC emacs-lisp
-;; Disable annoying ring-bell when backspace key is pressed in certain situations
-(setq ring-bell-function 'ignore)
+  ;; Disable annoying ring-bell when backspace key is pressed in certain situations
+  (setq ring-bell-function 'ignore)
 
-;; Disable scrollbar and toolbar
-(scroll-bar-mode -1)
-(tool-bar-mode -1)
+  ;; Disable scrollbar and toolbar
+  (scroll-bar-mode -1)
+  (tool-bar-mode -1)
 
-;; Set language environment to UTF-8
-(set-language-environment "UTF-8")
-(set-default-coding-systems 'utf-8)
+  ;; Set language environment to UTF-8
+  (set-language-environment "UTF-8")
+  (set-default-coding-systems 'utf-8)
 
-;; Longer whitespace, otherwise syntax highlighting is limited to default column
-(setq whitespace-line-column 1000) 
+  ;; Longer whitespace, otherwise syntax highlighting is limited to default column
+  (setq whitespace-line-column 1000) 
 
-;; Enable soft-wrap
-(global-visual-line-mode 1)
+  ;; Enable soft-wrap
+  (global-visual-line-mode 1)
 
-;; Maintain a list of recent files opened
-(recentf-mode 1)            
-(setq recentf-max-saved-items 50)
+  ;; Maintain a list of recent files opened
+  (recentf-mode 1)            
+  (setq recentf-max-saved-items 50)
 
-;; Move all the backup files to specific cache directory
-;; This way you won't have annoying temporary files starting with ~(tilde) in each directory
-;; Following setting will move temporary files to specific folders inside cache directory in EMACS_DIR
+  ;; Move all the backup files to specific cache directory
+  ;; This way you won't have annoying temporary files starting with ~(tilde) in each directory
+  ;; Following setting will move temporary files to specific folders inside cache directory in EMACS_DIR
 
-(setq user-cache-directory (concat EMACS_DIR "cache"))
-(setq backup-directory-alist `(("." . ,(expand-file-name "backups" user-cache-directory)))
-      url-history-file (expand-file-name "url/history" user-cache-directory)
-      auto-save-list-file-prefix (expand-file-name "auto-save-list/.saves-" user-cache-directory)
-      projectile-known-projects-file (expand-file-name "projectile-bookmarks.eld" user-cache-directory))
+  (setq user-cache-directory (concat EMACS_DIR "cache"))
+  (setq backup-directory-alist `(("." . ,(expand-file-name "backups" user-cache-directory)))
+		url-history-file (expand-file-name "url/history" user-cache-directory)
+		auto-save-list-file-prefix (expand-file-name "auto-save-list/.saves-" user-cache-directory)
+		projectile-known-projects-file (expand-file-name "projectile-bookmarks.eld" user-cache-directory))
 
-;; Org-mode issue with src block not expanding
-;; This is a fix for bug in org-mode where <s TAB does not expand SRC block
-(when (version<= "9.2" (org-version))
-(require 'org-tempo))
+  ;; Org-mode issue with src block not expanding
+  ;; This is a fix for bug in org-mode where <s TAB does not expand SRC block
+  (when (version<= "9.2" (org-version))
+  (require 'org-tempo))
 
-;; Coding specific setting
+  ;; Coding specific setting
 
-;; Automatically add ending brackets and braces
-(electric-pair-mode 1)
+  ;; Automatically add ending brackets and braces
+  (electric-pair-mode 1)
 
-;; Make sure tab-width is 4 and not 8
-(setq-default tab-width 4)
+  ;; Make sure tab-width is 4 and not 8
+  (setq-default tab-width 4)
 
-;; Highlight matching brackets and braces
-(show-paren-mode 1) 
+  ;; Highlight matching brackets and braces
+  (show-paren-mode 1)
+
+  ;; Disable default startup buffer
+  (setq inhibit-startup-screen t)
 #+END_SRC
 
 * Looks
@@ -281,13 +282,20 @@ A VC plugin that has github integrations
   (use-package envrc :ensure t)
 #+end_src
 
+** vterm
+
+#+begin_src emacs-lisp
+  (use-package vterm :ensure t)
+  (use-package eshell-vterm :ensure t)
+#+end_src
+
 * Language Server Protocol (LSP)
   With above setup done, below we will setup several packages closely related to LSP.
 
 ** Company
 Complete anything aka Company provides auto-completion. Company-capf is enabled by default when you start LSP on a project. You can also invoke ~M-x company-capf~ to enable capf (completion at point function).
 #+begin_src emacs-lisp
-(use-package company :ensure t)
+  (use-package company :ensure t :init (global-company-mode))
 #+end_src
 
 ** Yasnippet
@@ -305,7 +313,8 @@ To create a new snippet you can use ~yas-new-snippet~ command.
 ** FlyCheck
 FlyCheck checks for errors in code at run-time.
 #+begin_src emacs-lisp
-(use-package flycheck :ensure t :init (global-flycheck-mode))
+  (use-package flycheck :ensure t :init (global-flycheck-mode))
+  (setq ispell-default-dicctionary "es")
 #+end_src
 
 ** Dap Mode
@@ -432,8 +441,9 @@ Pakcages for other languages and hooks
 *** Common Lisp
 
 #+begin_src emacs-lisp
-  (use-package slime :ensure t)
+  (use-package sly :ensure t)
   (setq inferior-lisp-program "sbcl")
+  (add-hook 'common-lisp-hook 'company-mode)
 #+end_src
 
 *** Scheme
@@ -465,6 +475,60 @@ Pakcages for other languages and hooks
 #+begin_src emacs-lisp
   (use-package rust-mode :ensure t)
 #+end_src
+
+* TESTING
+
+** Corfu
+
+Testing corfu setup
+
+#+begin_src emacs-lisp 
+   ;;  ;;;; Code Completion
+
+  ;; (use-package corfu
+  ;;   ;; Optional customizations
+  ;;   :custom
+  ;;   (corfu-cycle t)                 ; Allows cycling through candidates
+  ;;   (corfu-auto t)                  ; Enable auto completion
+  ;;   (corfu-auto-prefix 2)
+  ;;   (corfu-auto-delay 0.3)
+  ;;   (corfu-popupinfo-delay '(0.5 . 0.2))
+  ;;   (corfu-preview-current 'insert) ; insert previewed candidate
+  ;;   (corfu-preselect 'prompt)
+  ;;   (corfu-on-exact-match nil)      ; Don't auto expand tempel snippets
+
+  ;;   ;; Optionally use TAB for cycling, default is `corfu-complete'.
+  ;;   :bind (:map corfu-map
+  ;; 			  ("M-SPC"      . corfu-insert-separator)
+  ;; 			  ("TAB"        . corfu-next)
+  ;; 			  ([tab]        . corfu-next)
+  ;; 			  ("S-TAB"      . corfu-previous)
+  ;; 			  ([backtab]    . corfu-previous)
+  ;; 			  ("S-<return>" . corfu-insert)
+  ;; 			  ("RET"        . nil))
+
+  ;;   :init
+  ;;   (global-corfu-mode)
+  ;;   (corfu-history-mode)
+  ;;   (corfu-popupinfo-mode) ; Popup completion info
+  ;;   :config
+  ;;   (add-hook 'eshell-mode-hook
+  ;; 			(lambda () (setq-local corfu-quit-at-boundary t
+  ;; 								   corfu-quit-no-match t
+  ;; 								   corfu-auto nil)
+  ;; 			  (corfu-mode))))
+
+
+#+end_src
+
+** EMMS
+
+#+begin_src emacs-lisp
+  (emms-all)
+  (setq emms-player-list '(emms-player-mpv)
+		emms-info-functions '(emms-info-native))
+#+end_src
+
 
 * Conclusion
 Go through [[https://github.com/emacs-lsp/lsp-java#supported-commands][Supported commands]] section of lsp-java github page to see commands provided in lsp-mode. Most of these commands are available under lsp's ~C-c l~ option. I hope this configuration file was useful.
