Add auto lsp mode for css

--- a/emacs-configuration.org
+++ b/emacs-configuration.org
@@ -496,6 +496,7 @@ Let's install the main package for lsp. Here we will integrate lsp with which-ke
 	 (java-mode . #'lsp-deferred)
 	 (latex-mode . #'lsp-deferred)
 	 (gdscript-mode . #'lsp-deferred)
+	 (css-mode . #'lsp-deferred)
   )
   :init (setq 
 	  lsp-keymap-prefix "C-c l"              ; this is for which-key integration documentation, need to use lsp-mode-map
