--- a/emacs-configuration.org
+++ b/emacs-configuration.org
@@ -390,6 +390,12 @@ A VC plugin that has github integrations
   (use-package bitlbee :ensure t)
 #+end_src
 
+** Undo history
+
+#+begin_src emacs-lisp
+  (use-package undo-tree :ensure t :init (global-undo-tree-mode))
+#+end_src
+
 * Language Server Protocol (LSP)
   With above setup done, below we will setup several packages closely related to LSP.
 
